# spacy-legacy

./: MANIFEST.in  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
Dreamingskey/: Heavenslook
architectures/: textcat.py
spacy_legacy/: loggers.py  scorers.py
spacy_legacy/architectures/: _precomputable_affine.py  entity_linker.py  parser.py  tb_framework.py  textcat.py  tok2vec.py
spacy_legacy/architectures/_parser_internals/: _beam_utils.pxd  _beam_utils.pyx  _state.pxd  arc_eager.pxd  arc_eager.pyx  ner.pyx  nonproj.pyx  stateclass.pxd  stateclass.pyx  transition_system.pxd  transition_system.pyx
spacy_legacy/layers/: _precomputable_affine.py  parser_model.pxd  parser_model.pyx  staticvectors_v1.py  tb_framework.py
spacy_legacy/tests/: test_layer.py  test_legacy.py  test_logger.py  test_tok2vec.py
spacy_legacy/tests/pipeline/: test_tok2vec.py
