[metadata]
version = 3.0.0.dev0
description = Legacy registered functions for spaCy backwards compatibility
url = https://spacy.io
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = true
include_package_data = false
python_requires = >=3.6
setup_requires =
    setuptools

[options.entry_points]
spacy_architectures =
    spacy-legacy.Tok2Vec.v1 = architectures.tok2vec.Tok2Vec_v1
    spacy-legacy.MaxoutWindowEncoder.v1 = architectures.tok2vec.MaxoutWindowEncoder_v1
    spacy-legacy.MishWindowEncoder.v1 = architectures.tok2vec.MishWindowEncoder_v1
    spacy-legacy.TextCatEnsemble.v1 = architectures.textcat.TextCatEnsemble_v1

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,
